<resources>
    <string name="app_name">VirtualFarm</string>
    <string name="temperature">Temperature :</string>
    <string name="humidity">Humidity :</string>
    <string name="sensor_output">Sensor Output</string>
    <string name="applogo">applogo</string>
    <string name="page2bg">page2bg</string>
    <string name="virtualfarm">VirtualFarm</string>
    <string name="sensors_output">sensors output</string>
    <string name="temperature1">temperature</string>
    <string name="humidity1">Humidity</string>
    <string name="templogo">templogo</string>
    <string name="humlogo">humlogo</string>
    <string name="advanced_agriculture_using_iot">Advanced Agriculture Using IoT</string>
    <string name="start">START</string>
    <string name="temperature3">Temperature</string>
    <string name="frontpg">frontpg</string>
    <string name="welcome_message">Welcome To VIRTUAL FARM</string>
    <string name="tube_water_level">Tube Water Level</string>
    <string name="cardimage">cardimage</string>
    <string name="temlogo">temlogo</string>
    <string name="_0">0</string>
    <string name="temperature4">Temperature</string>
    <string name="tank_water_level">Tank water level</string>
    <string name="username">Username</string>
    <string name="systemID">System ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_info">Info</string>
    <string name="title_user">User</string>

</resources>