<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.virtualfarm2020.ui.home.InfoFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.virtualfarm2020.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.virtualfarm2020.ui.notifications.UserFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_user" />
</navigation>