<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page2design"

    android:scrollbars="none"
    app:layout_scrollFlags="noScroll"
    tools:context=".HomeScreen">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="146dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/applogoblack" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="414dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:fadeScrollbars="true"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="48dp"
                android:layout_height="200dp"
                android:layout_marginStart="0dp"
                android:background="#D3D0D0">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="127dp"
                    android:layout_height="27dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="31dp"
                    android:layout_marginBottom="147dp"
                    android:text="@string/temperature4"
                    android:textColor="#020202"
                    android:textSize="20sp" />



                <TextView
                    android:id="@+id/temp1"
                    android:layout_width="109dp"
                    android:layout_height="29dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="156dp"
                    android:layout_marginEnd="43dp"
                    android:layout_marginBottom="12dp"
                    android:text="0"
                    android:textColor="#090909"
                    android:textSize="25sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="64dp"
                android:background="@drawable/cardstyle">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="127dp"
                    android:layout_height="27dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="31dp"
                    android:layout_marginBottom="147dp"
                    android:text="@string/temperature4"
                    android:textColor="#020202"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="46dp"
                    android:contentDescription="@string/temlogo"
                    app:srcCompat="@drawable/temperatureicon" />

                <TextView
                    android:id="@+id/temp"
                    android:layout_width="109dp"
                    android:layout_height="29dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="156dp"
                    android:layout_marginEnd="43dp"
                    android:layout_marginBottom="12dp"
                    android:text="0"
                    android:textColor="#090909"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/cardstyle">

                <TextView

                    android:id="@+id/textView3"
                    android:layout_width="115dp"
                    android:layout_height="28dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="57dp"
                    android:layout_marginTop="23dp"
                    android:layout_marginEnd="28dp"
                    android:layout_marginBottom="148dp"
                    android:text="@string/humidity1"
                    android:textColor="#0B0B0B"
                    android:textSize="20sp"
                    tools:layout_centerHorizontal="true" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="101dp"
                    android:layout_height="101dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="46dp"
                    android:contentDescription="@string/humlogo"
                    app:srcCompat="@drawable/humidityicon" />

                <TextView
                    android:id="@+id/hum"
                    android:layout_width="133dp"
                    android:layout_height="33dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="155dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="8dp"
                    android:text="0"
                    android:textColor="#090909"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginEnd="107.5dp"
                android:background="@drawable/cardstyle">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="190dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="27dp"
                    android:layout_marginBottom="143dp"
                    android:text="@string/tube_water_level"
                    android:textColor="#090909"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="83dp"
                    android:layout_height="114dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="46dp"
                    android:contentDescription="@string/tube_water_level"
                    app:srcCompat="@drawable/tube_level" />

                <TextView
                    android:id="@+id/mois"
                    android:layout_width="126dp"
                    android:layout_height="33dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="51dp"
                    android:layout_marginTop="154dp"
                    android:layout_marginEnd="23dp"
                    android:layout_marginBottom="14dp"
                    android:text="0"
                    android:textColor="#090909"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginEnd="110.5dp"
                android:background="@drawable/cardstyle">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="190dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="140dp"
                    android:text="@string/tank_water_level"
                    android:textColor="#090909"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="83dp"
                    android:layout_height="114dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="46dp"
                    android:contentDescription="Water Tank Level"
                    app:srcCompat="@drawable/water_tank_level" />

                <TextView
                    android:id="@+id/waterlevel"
                    android:layout_width="126dp"
                    android:layout_height="33dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="52dp"
                    android:layout_marginTop="157dp"
                    android:layout_marginEnd="22dp"
                    android:layout_marginBottom="9dp"
                    android:text="@string/_0"
                    android:textColor="#090909"
                    android:textSize="25sp" />
            </RelativeLayout>


        </LinearLayout>

    </HorizontalScrollView>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="32dp"
        android:text="@string/sensors_output"
        android:textColor="#0C0C0C"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/advanced_agriculture_using_iot"
        android:textColor="#0C0C0C"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>